# CLI-weather

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cli_weather/: __main__.py  activity.py  config.py  location.py  main.py  utils.py  weather.py
cli_weather/core/: activity.py  location.py  weather.py
codes/: config.json  criteria.json  get_weather.py
src/cli_weather/: __main__.py  config.py  location.py
src/cli_weather/core/: __init__.py  activity_service.py  app.py  cache_service.py  config_service.py  exceptions.py  location_service.py  models.py  weather_service.py
src/cli_weather/legacy/: __init__.py  activity.py  legacy_main.py  utils.py  weather.py
src/cli_weather/ui/: __init__.py  rich_ui.py  typer_cli.py
tests/: test_core.py  test_services.py  test_ui.py
